--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,10 +2,16 @@
   "extends": "@workspace/typescript-config/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
+
+    "module": "esnext",
+    "moduleResolution": "bundler",
+
     "paths": {
       "@/*": ["./*"],
-      "@workspace/ui/*": ["../../packages/ui/src/*"]
+      "@workspace/ui/*": ["../../packages/ui/src/*"],
+      "@workspace/backend/*": ["../../packages/backend/convex/*"]
     },
+
     "plugins": [
       {
         "name": "next"
