--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -18,6 +18,7 @@
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "^1.31.2",
+    "jotai": "^2.16.1",
     "lucide-react": "^0.475.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
