--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,6 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -23,12 +22,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.69.0",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6",
-    "zod": "^3.25.76"
+    "tw-animate-css": "^1.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -41,6 +36,13 @@
     "eslint": "^9.32.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2"
+  },
+  "peerDependencies": {
+    "react": "^19",
+    "react-dom": "^19",
+    "react-hook-form": "^7.69.0",
+    "zod": "^3.25.76",
+    "@hookform/resolvers": "^5.2.2"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
