--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,7 +14,16 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^3.0.9",
+    "@ai-sdk/google": "1.2.22",
+    "@ai-sdk/groq": "^1.2.9",
+    "@ai-sdk/openai": "1.3.23",
+    "@ai-sdk/vercel": "1.0.31",
+    "@ai-sdk/xai": "^3.0.10",
     "@clerk/backend": "^2.29.0",
-    "convex": "^1.31.2"
+    "@convex-dev/agent": "^0.1.18",
+    "ai": "4.3.19",
+    "convex": "^1.31.2",
+    "convex-helpers": "^0.1.108"
   }
 }
