--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,21 +9,27 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.6",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.6",
+    "use-stick-to-bottom": "^1.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -38,11 +44,11 @@
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "react": "^19",
     "react-dom": "^19",
     "react-hook-form": "^7.69.0",
-    "zod": "^3.25.76",
-    "@hookform/resolvers": "^5.2.2"
+    "zod": "^3.25.76"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
