--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,7 +5,9 @@
 
     "module": "esnext",
     "moduleResolution": "bundler",
-    "ignoreDeprecations": "6.0",
+    // "ignoreDeprecations": "6.0",
+    "skipLibCheck": true,
+    "allowJs": true,
 
     "paths": {
       "@/*": ["./*"],
