--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -1,8 +1,9 @@
 {
   "name": "widget",
   "version": "0.0.1",
-  "type": "module",
   "private": true,
+  "type": "module",
+  "packageManager": "pnpm@10.27.0",
   "scripts": {
     "dev": "next dev --turbopack --port 3001",
     "build": "next build",
@@ -13,7 +14,8 @@
   },
   "dependencies": {
     "@convex-dev/agent": "0.1.18",
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "catalog:",
+    "@tailwindcss/postcss": "catalog:",
     "@vapi-ai/web": "^2.5.2",
     "@workspace/backend": "workspace:*",
     "@workspace/math": "workspace:*",
@@ -21,21 +23,21 @@
     "convex": "^1.31.2",
     "jotai": "^2.16.1",
     "lucide-react": "^0.475.0",
-    "next": "16.0.10",
-    "next-themes": "^0.4.6",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-hook-form": "^7.69.0",
-    "zod": "^3.25.76"
+    "next": "catalog:",
+    "postcss": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
+    "tailwindcss": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.25",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@workspace/eslint-config": "workspace:^",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.39.1",
-    "typescript": "^5.9.3"
+    "typescript": "catalog:"
   }
 }
