--- a/apps/widget/tsconfig.json
+++ b/apps/widget/tsconfig.json
@@ -5,7 +5,7 @@
 
     "module": "esnext",
     "moduleResolution": "bundler",
-    "ignoreDeprecations": "6.0",
+    // "ignoreDeprecations": "6.0",
 
     "paths": {
       "@/*": ["./*"],
