--- a/package.json
+++ b/package.json
@@ -2,34 +2,40 @@
   "name": "shadcn-ui-monorepo",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*",
-    "prettier": "^3.7.4",
-    "turbo": "^2.6.3",
-    "typescript": "5.7.3"
-  },
   "packageManager": "pnpm@10.27.0",
   "engines": {
     "node": ">=20"
   },
+  "scripts": {
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+  },
+  "pnpm": {
+    "overrides": {
+      "typescript": "5.9.3",
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3",
+      "csstype": "3.2.3",
+      "react-hook-form": "7.54.2",
+      "zod": "3.25.76",
+      "@hookform/resolvers": "3.10.0"
+    }
+  },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8"
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "next": "16.0.10",
+    "react-hook-form": "7.54.2",
+    "zod": "3.25.76",
+    "@hookform/resolvers": "3.10.0"
+  },
+  "devDependencies": {
+    "typescript": "5.9.3",
+    "prettier": "^3.7.4",
+    "turbo": "^2.7.3",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*"
   }
 }
