--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,12 +6,12 @@
     "setup": "convex dev --until-success"
   },
   "exports": {
-    "./convex": "./convex/*.ts "
+    "./convex": "./convex/*.ts"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
     "@workspace/typescript-config": "workspace:*",
-    "typescript": "latest"
+    "typescript": "5.9.3"
   },
   "dependencies": {
     "@ai-sdk/gateway": "^3.0.9",
@@ -24,6 +24,8 @@
     "@convex-dev/agent": "^0.1.18",
     "ai": "4.3.19",
     "convex": "^1.31.2",
-    "convex-helpers": "^0.1.108"
+    "convex-helpers": "^0.1.108",
+    "zod": "3.24.1",
+    "zod-to-json-schema": "3.23.3"
   }
 }
