--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,17 @@
 packages:
   - "apps/*"
   - "packages/*"
+
+catalog:
+  react: 19.2.1
+  react-dom: 19.2.1
+  next: 16.0.10
+  react-hook-form: 7.54.2
+  zod: 3.25.76
+  "@hookform/resolvers": 3.10.0
+  typescript: 5.9.3
+  "@types/react": 19.2.7
+  "@types/react-dom": 19.2.3
+  "@tailwindcss/postcss": 4.1.18 # Add or update this line
+  tailwindcss: 4.1.18
+  postcss: 8.4.49
