--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,8 @@
     "./*": "./src/*.tsx"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
