--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -29,6 +29,7 @@
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-hook-form": "catalog:",
+    "react-scroll-to-bottom": "^4.2.0",
     "tailwindcss": "catalog:",
     "zod": "catalog:"
   },
@@ -36,6 +37,7 @@
     "@types/node": "^20.19.25",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "@types/react-scroll-to-bottom": "^4.2.5",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.39.1",
