--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,9 @@
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "^1.31.2",
+    "countries-and-timezones": "^3.8.0",
+    "date-fns": "^4.1.0",
+    "jotai": "^2.16.1",
     "lucide-react": "^0.475.0",
     "next": "catalog:",
     "postcss": "catalog:",
