--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^1.0.8",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
