--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,7 +33,9 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "react-infinite-scroll-hook": "^6.0.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^1.0.8",
     "remark-gfm": "^4.0.1",
