--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -16,6 +16,7 @@
     "@convex-dev/agent": "0.1.18",
     "@hookform/resolvers": "catalog:",
     "@tailwindcss/postcss": "catalog:",
+    "@types/react-scroll-to-bottom": "^4.2.5",
     "@vapi-ai/web": "^2.5.2",
     "@workspace/backend": "workspace:*",
     "@workspace/math": "workspace:*",
@@ -29,6 +30,7 @@
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-hook-form": "catalog:",
+    "react-scroll-to-bottom": "^4.2.0",
     "tailwindcss": "catalog:",
     "zod": "catalog:"
   },
