--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,8 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@ai-sdk/cohere": "^1.0.3",
+    "@ai-sdk/deepinfra": "1.0.23",
     "@ai-sdk/gateway": "^3.0.9",
     "@ai-sdk/google": "1.2.22",
     "@ai-sdk/groq": "^1.2.9",
