--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "react-dropzone": "^14.4.0",
     "react-infinite-scroll-hook": "^6.0.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^1.0.8",
