--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,6 +24,7 @@
     "@ai-sdk/xai": "^3.0.10",
     "@clerk/backend": "^2.29.0",
     "@convex-dev/agent": "^0.1.18",
+    "@convex-dev/agent-playground": "^0.0.20",
     "@convex-dev/rag": "0.3.3",
     "ai": "4.3.19",
     "convex": "^1.31.2",
